<resources>
    <string name="app_name">PlumTree</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_log_in">Reset</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_enter">Enter</string>

    <string name="settings_followed">Followed Businesses</string>
    <string name="settings_app">App Settings</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_terms">Terms of Service</string>
    <string name="settings_show">Show Tutorial</string>
    <string name="settings_logout">Logout from Application</string>
    <string name="profile_name">Name:</string>
    <string name="profile_dob">D.O.B.:</string>
    <string name="settings_plum_points">PLUM points</string>
    <string name="settings_information">Information</string>
    <string name="profile_view_title">Your profile</string>
    <string name="profile_edit_title">Edit profile</string>
    <string name="settings_edit_full_name">Full Name:</string>
    <string name="settings_edit_dob">Date of birth:</string>
    <string name="settings_email_address">Email address</string>
    <string name="settings_your_email">Your email</string>
    <string name="settings_phone_number">Phone number</string>
    <string name="settings_your_phone_number">Your phone number</string>
    <string name="settings_gender">Gender</string>

</resources>
