<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_menu_height"
        android:background="@color/blue_text"
        android:paddingLeft="@dimen/settings_pad_horizontal"
        android:paddingRight="@dimen/settings_pad_horizontal">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/top_title"
            style="@style/myText20WhiteTitle"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/back_button"
            android:text="@string/profile_edit_title" />

        <ImageButton
            android:id="@+id/edit_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:src="@drawable/ok_on" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scroll_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/profile_editname_rl"
                style="@style/mySettingsRL"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="26dp"
                    android:layout_marginBottom="20dp"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/profile_imagebutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@+id/profile_photo"
                    android:layout_alignBottom="@+id/profile_photo"
                    android:layout_marginBottom="-10dp"
                    android:layout_marginRight="-10dp"
                    android:src="@drawable/edit_profile" />

                <LinearLayout
                    android:layout_width="0px"
                    android:layout_height="0px"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <EditText
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/profile_edit_nameinf"
                    android:layout_below="@+id/profile_edit_nameinf"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:ems="10"
                    android:singleLine="true">

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/profile_edit_nameinf"
                    style="@style/myText14Black"
                    android:layout_marginLeft="30dp"
                    android:layout_alignTop="@+id/profile_photo"
                    android:layout_toRightOf="@+id/profile_photo"
                    android:text="@string/settings_edit_full_name" />

            </RelativeLayout>

            <View style="@style/myDivider" />

            <TextView
                android:id="@+id/text_dob"
                style="@style/myText14Black"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/settings_edit_dob" />

            <Button
                android:id="@+id/setdate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:background="@drawable/blue_spinner"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="27 August 2014" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="5dip"
                android:background="@drawable/drop_shadow"
                android:layout_marginTop="10dp"/>


            <RelativeLayout
                android:id="@+id/profile_inf_rl"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#EEEEEE">

                <TextView
                    android:id="@+id/profile_edit_info"
                    style="@style/myText14Black"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="19dp"
                    android:text="@string/settings_information" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/profile_email_rl"
                style="@style/mySettingsRL">

                <TextView
                    android:id="@+id/profile_edit_email_header"
                    style="@style/myText14Black"
                    android:layout_alignParentTop="true"
                    android:text="@string/settings_email_address"/>

                <EditText
                    android:id="@+id/profile_email"
                    style="@style/mySettingsEditText"
                    android:layout_alignParentBottom="true"
                    android:hint="@string/settings_your_email" />

            </RelativeLayout>

            <View style="@style/myDivider" />

            <RelativeLayout
                android:id="@+id/profile_phone_rl"
                style="@style/mySettingsRL">

                <TextView
                    android:id="@+id/profile_edit_phone_header"
                    style="@style/myText14Black"
                    android:layout_alignParentTop="true"
                    android:text="@string/settings_phone_number"/>

                <EditText
                    android:id="@+id/profile_phone"
                    style="@style/mySettingsEditText"
                    android:layout_alignParentBottom="true"
                    android:hint="@string/settings_your_phone_number" />

            </RelativeLayout>

            <View style="@style/myDivider" />

            <RelativeLayout
                android:id="@+id/profile_gender_rl"
                style="@style/mySettingsRL">

                <TextView
                    android:id="@+id/profile_edit_gender_header"
                    style="@style/myText14Black"
                    android:layout_centerVertical="true"
                    android:text="@string/settings_gender"/>

                <Spinner
                    android:id="@+id/profile_gender_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/blue_spinner"
                    android:text="" />

            </RelativeLayout>

            <View style="@style/myDivider" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>
